@@ -174,7 +174,7 @@ tr {
     }
 }
 
-@dgrid-focus-color: #114;
+@dgrid-focus-color: #222;
 .dgrid-focus, .dgrid-selected {
     .pln {
         background-color: @grey + @dgrid-focus-color;
